--- a/FUSE/Debug/makefile
+++ b/FUSE/Debug/makefile
@@ -25,11 +25,14 @@ endif
 # All Target
 all: FUSE
 
+dependents:
+	-cd /home/utnso/workspace/tp-2019-2c-No-C-Nada/biblioNOC/Debug && $(MAKE) clean all
+
 # Tool invocations
-FUSE: $(OBJS) $(USER_OBJS)
+FUSE: $(OBJS) $(USER_OBJS) /home/utnso/workspace/tp-2019-2c-No-C-Nada/biblioNOC/Debug/libbiblioNOC.so
 	@echo 'Building target: $@'
 	@echo 'Invoking: Cross GCC Linker'
-	gcc -L/home/utnso/workspace/tp-2019-2c-No-C-Nada/bibliotecaNOCE/Debug -o "FUSE" $(OBJS) $(USER_OBJS) $(LIBS)
+	gcc -L/home/utnso/workspace/tp-2019-2c-No-C-Nada/biblioNOC/Debug -o "FUSE" $(OBJS) $(USER_OBJS) $(LIBS)
 	@echo 'Finished building target: $@'
 	@echo ' '
 
@@ -39,5 +42,6 @@ clean:
 	-@echo ' '
 
 .PHONY: all clean dependents
+/home/utnso/workspace/tp-2019-2c-No-C-Nada/biblioNOC/Debug/libbiblioNOC.so:
 
 -include ../makefile.targets
