--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>tp-2019-2c-No-C-Nada</name>
+	<name>tp-so</name>
 	<comment></comment>
 	<projects>
 	</projects>
