--- a/biblioSuse/.cproject
+++ b/biblioSuse/.cproject
@@ -61,8 +61,9 @@
 								<option defaultValue="true" id="gnu.cpp.link.so.debug.option.shared.1776960456" name="Shared (-shared)" superClass="gnu.cpp.link.so.debug.option.shared" valueType="boolean"/>
 							</tool>
 							<tool id="cdt.managedbuild.tool.gnu.assembler.so.debug.175157079" name="GCC Assembler" superClass="cdt.managedbuild.tool.gnu.assembler.so.debug">
-								<option id="gnu.both.asm.option.include.paths.1669542768" superClass="gnu.both.asm.option.include.paths" valueType="includePath">
+								<option id="gnu.both.asm.option.include.paths.1669542768" name="Include paths (-I)" superClass="gnu.both.asm.option.include.paths" valueType="includePath">
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/biblioNOC}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/hilolay}&quot;"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.assembler.input.1384469759" superClass="cdt.managedbuild.tool.gnu.assembler.input"/>
 							</tool>
@@ -82,6 +83,7 @@
 						<entry flags="RESOLVED" kind="libraryFile" name="biblioNOC" srcPrefixMapping="" srcRootPath=""/>
 					</externalSetting>
 				</externalSettings>
+				<externalSettings containerId="hilolay;" factoryId="org.eclipse.cdt.core.cfg.export.settings.sipplier"/>
 			</storageModule>
 		</cconfiguration>
 		<cconfiguration id="cdt.managedbuild.config.gnu.so.release.1113614066">
