--- a/biblioSuse/.project
+++ b/biblioSuse/.project
@@ -4,6 +4,7 @@
 	<comment></comment>
 	<projects>
 		<project>biblioNOC</project>
+		<project>hilolay</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
