--- a/configs/SUSE/suseServer.cfg
+++ b/configs/SUSE/suseServer.cfg
@@ -1,7 +1,7 @@
 LISTEN_PORT=5003
-METRICS_TIMER=10
-MAX_MULTIPROG=15
-SEM_IDS=[solo_hiper_mega_piola, afinado]
-SEM_INIT=[1, 0]
-SEM_MAX=[10, 10]
+METRICS_TIMER=50
+MAX_MULTIPROG=10
+SEM_IDS=[A, B]
+SEM_INIT=[0, 1]
+SEM_MAX=[1, 5]
 ALPHA_SJF=0.5
